ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: mattermost
spec:
  rules:
  - host: chat.foo.nip.io
    http:
      paths:
      - backend:
          service:
            name: mattermost
            port:
              number: 8065
        path: /
        pathType: Exact
status:
  loadBalancer: {}
